# leetcode

./: .gitignore  pyproject.toml
java/problem128/: pom.xml
java/problem133/: pom.xml
java/problem2/: pom.xml
java/problem3/: pom.xml
java/problem5/: pom.xml
java/problem53/: pom.xml
problem1/: README.md
problem1/java/: Solution.java
problem121/java/: Solution.java
problem121/python/: solution.py
problem122/python/: README.md  solution.py
problem13/: Cargo.toml
problem134/python/: README.md
problem135/python/: solution.py
problem169/: README.md
problem169/python/: solution.py
problem217/java/: Solution.java
problem238/java/: Solution.java
problem238/python/: README.md  solution.py
problem26/: README.md
problem27/: README.md
problem283/python/: solution.py
problem334/python/: solution.py
problem380/python/: solution.py
problem394/python/: solution.py
problem55/python/: README.md  solution.py
problem724/python/: solution.py
problem80/: README.md
problem88/: README.md
problem9/: README.md
problem9/src/: main.rs
problem933/python/: solution.py
python/neetcode_binary_search/: solution.py
python/neetcode_contains_duplicate/: solution.py
python/neetcode_two_sum/: solution.py
python/neetcode_valid_anagram/: solution.py
python/neetcode_valid_palindrome/: solution.py
python/neetcode_valid_paren/: solution.py
python/problem1004/: solution.py
python/problem11/: solution.py
python/problem118/: solution.py
python/problem1207/: solution.py
rust/problem1/src/: main.rs
utils/: setup_java.sh  setup_python.sh
(+76 files in other folders)
