[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.27.0",
    "debugpy>=1.8.12",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
include = ["problem_*", "neetcode_*"]
exclude = ["rust", "java"]
namespaces = false
